# cmake-macos-runtime-dependencies

./: .gitignore  CMakeLists.txt  README.md  build-deps.sh  my_app.c
